# mushboom

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
docs/superpowers/plans/: 2026-03-16-ui-rewrite.md  2026-03-17-hardware-abstraction-debug-mode.md  2026-03-18-dashboard-layout-consistency.md
docs/superpowers/specs/: 2026-03-16-ui-rewrite-design.md  2026-03-17-hardware-abstraction-debug-mode-design.md  2026-03-18-dashboard-layout-consistency-design.md
src/: api.py  api_debug.py  config.py  config_local.example.py  hardware.py  main.py  networks.example.json  shared_state.py
src/lib/: logger.py  reset_reason.py  template.py  thingspeak.py  wifi.py
src/static/: index.html  logs.html  memory.html  style.css
src/tasks/: control_loop.py  memory_monitor.py  relay_loop.py  sensor_loop.py  task_helpers.py  thingspeak_loop.py
tests/: test_api_debug.py  test_api_static.py  test_control.py  test_hardware.py  test_relay_loop.py  test_sensor_loop.py
tools/: tail_log.py
